kubernetes/apps/default/nas/photos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photos
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 5443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: photos
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.3
    ports:
      - port: 5443
---
